k8s/deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myresumeapi-deployment
  namespace: myresume
  labels:
    app: myresumeapi
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myresumeapi
      version: v1
  template:
    metadata:
      labels:
        app: myresumeapi
        version: v1
    spec:
      hostNetwork: false
      containers:
      - name: myresumeapi
        image: IMAGE_NAME_TAG
        ports:
        - containerPort: 8080
        
---
apiVersion: v1
kind: Service
metadata:
  name: myresumeapi-service
  namespace: myresume
spec:
  type: ClusterIP
  selector:
    app: myresumeapi
  ports:
    - port: 8080
      name: "8080"
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: '8600'
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"


  name: ing-myresumeapi
  namespace: myresume
spec:
  #tls:
  #- hosts:
  #  - "myresumeapi.sftcloud.com.mx"
  #  secretName: sftcloudcommx-cer
  rules:
  - host: "myresumeapi.k8s.sftcloud.com.mx"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myresumeapi-service
            port:
              number: 8080
